# learn_ndk

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/lin/abcdq/ndker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/lin/abcdq/ndker/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/lin/abcdq/ndker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ndk1/src/androidTest/java/lin/abcdq/ndk1/: ExampleInstrumentedTest.kt
ndk1/src/main/java/lin/abcdq/ndk1/: JNITest.kt
ndk1/src/main/jni/: native_lib.cpp
ndk2/src/androidTest/java/lin/abcdq/ndk2/: ExampleInstrumentedTest.kt
ndk2/src/main/java/lin/abcdq/ndk2/: JNITest.kt
ndk2/src/main/jni/: native_lib.cpp
ndk2/src/test/java/lin/abcdq/ndk2/: ExampleUnitTest.kt
ndk3/src/main/java/lin/abcdq/ndk3/: JNITest.kt
ndk3/src/test/java/lin/abcdq/ndk3/: ExampleUnitTest.kt
ndk4/src/androidTest/java/lin/abcdq/ndk4/: ExampleInstrumentedTest.kt
ndk4/src/main/cpp/: native_lib.cpp
ndk4/src/main/java/lin/abcdq/ndk4/: JNITest.kt
ndk5/: CMakeLists.txt
ndk5/src/main/: AndroidManifest.xml
ndk5/src/main/cpp/sample/: TriangleSample.h
ndk5/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
ndk6/: CMakeLists.txt
ndk6/src/main/cpp/sample/: TextureSample.cpp  VAOSample.h  VBOSample.cpp
ndk6/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
ndk6/src/main/java/lin/abcdq/ndk6/: JNITest.kt
ndk6/src/test/java/lin/abcdq/ndk6/: ExampleUnitTest.kt
ndk7/: CMakeLists.txt  build.gradle
ndk7/src/androidTest/java/lin/abcdq/ndk7/: ExampleInstrumentedTest.kt
ndk7/src/main/: AndroidManifest.xml
ndk7/src/main/cpp/: native_lib.cpp
ndk7/src/main/cpp/sample/: MatrixSample.cpp  MatrixSample.h
ndk7/src/main/java/lin/abcdq/ndk7/: JNITest.kt
ndk7/src/test/java/lin/abcdq/ndk7/: ExampleUnitTest.kt
ndk8/: CMakeLists.txt
ndk8/src/androidTest/java/lin/abcdq/ndk8/: ExampleInstrumentedTest.kt
ndk8/src/main/: AndroidManifest.xml
ndk8/src/main/cpp/: native_lib.cpp
ndk8/src/main/cpp/egl/: EglSample.cpp  EglSample.h
ndk8/src/main/cpp/sample/: CameraSample.cpp  CameraSample.h  FBOSample.cpp  FBOSample.h
ndk8/src/main/cpp/util/: GLUtils.cpp
ndk8/src/main/java/lin/abcdq/ndk8/: JNITest.kt
ndk8/src/test/java/lin/abcdq/ndk8/: ExampleUnitTest.kt
ndk_lesson_1/: CMakeLists.txt  build.gradle
ndk_lesson_1/src/main/: AndroidManifest.xml
ndk_lesson_1/src/main/java/lin/abcdq/ndk1/: JNITest.kt
ndk_lesson_1/src/test/java/lin/abcdq/ndk1/: ExampleUnitTest.kt
ndk_lesson_2/: CMakeLists.txt  build.gradle
ndk_lesson_2/src/main/: AndroidManifest.xml
ndk_lesson_2/src/main/java/lin/abcdq/ndk2/: JNITest.kt
ndk_lesson_2/src/main/jni/: native_lib.cpp
ndk_lesson_3/: CMakeLists.txt  build.gradle
ndk_lesson_3/src/androidTest/java/lin/abcdq/ndk3/: ExampleInstrumentedTest.kt
ndk_lesson_3/src/main/: AndroidManifest.xml
ndk_lesson_3/src/main/java/lin/abcdq/ndk3/: JNITest.kt
ndk_lesson_3/src/main/jni/: native_lib.cpp
ndk_lesson_4/: CMakeLists.txt  build.gradle
ndk_lesson_4/src/main/: AndroidManifest.xml
ndk_lesson_4/src/main/cpp/: CMakeLists.txt  native_lib.cpp
ndk_lesson_4/src/main/cpp/util/: GLProgram.cpp  GLProgram.h
ndk_lesson_4/src/main/cpp/utils/: GLPrograms.cpp  GLPrograms.h
ndk_lesson_4/src/main/java/lin/abcdq/ndk4/: JNITest.kt
ndk_lesson_4/src/main/jni/: native_lib.cpp
ndk_lesson_4/src/test/java/lin/abcdq/ndk4/: ExampleUnitTest.kt
ndk_lesson_5/src/androidTest/java/lin/abcdq/ndk5/: ExampleInstrumentedTest.kt
ndk_lesson_5/src/main/cpp/: native_lib.cpp
ndk_lesson_5/src/main/cpp/sample/: TriangleSample.cpp  TriangleSample.h
ndk_lesson_5/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
ndk_lesson_5/src/main/java/lin/abcdq/ndk5/: JNITest.kt
ndk_lesson_5/src/test/java/lin/abcdq/ndk5/: ExampleUnitTest.kt
ndk_lesson_6/: CMakeLists.txt
ndk_lesson_6/src/androidTest/java/lin/abcdq/ndk6/: ExampleInstrumentedTest.kt
ndk_lesson_6/src/main/: AndroidManifest.xml
ndk_lesson_6/src/main/cpp/: native_lib.cpp
ndk_lesson_6/src/main/cpp/sample/: TextureSample.cpp  TextureSample.h  VAOSample.cpp  VBOSample.h
ndk_lesson_6/src/main/java/lin/abcdq/ndk6/: JNITest.kt
